--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   google_sign_in: ^6.1.5
   flutter_riverpod: ^2.3.10
   firebase_storage: ^11.2.6
+  fpdart: ^1.1.0
 
 dev_dependencies:
   flutter_test:
