--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   flutter_riverpod: ^2.3.10
   firebase_storage: ^11.2.6
   fpdart: ^1.1.0
+  routemaster: ^1.0.1
 
 dev_dependencies:
   flutter_test:
