--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   firebase_storage: ^11.2.6
   fpdart: ^1.1.0
   routemaster: ^1.0.1
+  dotted_border: ^2.0.0+3
+  file_picker: ^5.5.0
 
 dev_dependencies:
   flutter_test:
